--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-background-color": "^0.0.8",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-linear-gradient": "^2.8.2",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.25.0",
     "react-native-size-matters": "^0.4.0",
