--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "react-native": "0.72.4",
     "react-native-animated-pagination-dots": "^0.1.73",
     "react-native-background-color": "^0.0.8",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.25.0",
     "react-native-size-matters": "^0.4.0",
-    "react-native-svg": "^13.13.0"
+    "react-native-svg": "^13.13.0",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
