--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-screens": "^3.25.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^13.13.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
